# ipgeolocation

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  llms.txt
.github/workflows/: ci.yml  sbom.yml
proto/: geolocation.proto
src/: cache.rs  country_data.rs  geoip.rs  handlers.rs  http3.rs  languages.rs  lib.rs  main.rs  models.rs  proto.rs  timezone.rs  tz_utils.rs
src/mcp/: axum_handlers.rs  mod.rs  resources.rs  schemas.rs  tools.rs
tests/: integration.rs
