[package]
name = "ipgeolocation"
version = "0.2.0"
edition = "2021"
description = "High-performance IP geolocation API service"
license = "MIT"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# IP geolocation
maxminddb = "0.27"

# Timezone from coordinates
tzf-rs = "1"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Protobuf serialization
prost = "0.14"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "yaml"] }

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Timezone calculations
chrono = "0.4"
chrono-tz = "0.10"

# HTTP/3 and QUIC support
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
bytes = "1"
http = "1"
http-body-util = "0.1"
mcp-protocol-sdk = "0.5.1"
async-trait = "0.1.89"
futures = "0.3.31"
async-stream = "0.3.6"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio-test = "0.4"
serde_urlencoded = "0.7"
yaml-rust2 = "0.11"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
